# merlin-matrix

./: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/permissions/: overview.md
migrations/2026-03-23-215202-0000_groups/: up.sql
migrations/2026-04-12-184516-0000_new_schema_cgpr/: down.sql  up.sql
migrations/2026-04-13-222705-0000_context_permissions/: down.sql  up.sql
migrations/2026-04-13-231727-0000_group_users/: down.sql  up.sql
migrations/2026-04-14-214919-0000_column_rename/: down.sql  up.sql
migrations/2026-04-15-210458-0000_name_case_insensitive/: down.sql  up.sql
migrations/2026-04-16-205620-0000_unique_constraints/: down.sql  up.sql
migrations/2026-04-18-213711-0000_everyone_group/: down.sql  up.sql
migrations/2026-05-04-150039-0000_room_id_format/: down.sql  up.sql
migrations/2026-05-08-101811-0000_permissions_uniqueness/: down.sql  up.sql
src/: init.rs  lib.rs  main.rs
src/commands/: cmd.rs  editable_message.rs  entry.rs  message_printer.rs  mod.rs  register.rs  utils.rs
src/commands/core/: mod.rs
src/commands/utils/: args.rs  error.rs  mod.rs  printer.rs  reply_to.rs
src/config/: creds.rs  data.rs  handlers.rs  mod.rs  register.rs
src/handlers/: mod.rs  on_invite.rs  on_maybe_command.rs  on_maybe_new_user.rs  on_new_message.rs  on_ready.rs  register.rs
src/org/: mod.rs  utils.rs
src/org/context_permissions/: models.rs  schema.rs
src/org/contexts/: mod.rs  models.rs  schema.rs
src/org/group_users/: models.rs  schema.rs
src/org/groups/: models.rs  schema.rs
src/org/permissions/: models.rs  schema.rs
(+32 files in other folders)
