[package]
name = "merlin-matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel-derive-newtype = "2.1"
diesel_migrations = { version = "2.3", features = ["sqlite"] }
evalexpr = { version = "13.1.0", features = ["serde"] }
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "39255c0" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
toml = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
